# ifc-cli

./: .gitignore  CMakeLists.txt  README.md  build.md  doc.md  main.cpp
cmake/: FixupMacBundle.cmake.in
src/: geometry.hpp  main.cpp  material.hpp  protocol.hpp  scene.hpp  spec.md  transform.hpp
